<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".addtask.AddTaskActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginStart="@dimen/screen_horizontal_margin"
        android:layout_marginEnd="@dimen/screen_horizontal_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_14sdp"
            android:layout_height="@dimen/_14sdp"
            android:layout_alignTop="@+id/tvAddTask"
            android:layout_alignBottom="@+id/tvAddTask"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvAddTask"
            android:layout_width="385dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_toEndOf="@+id/ivBack"
            android:text="@string/add_task"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/title_text_size" />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_task_screen_horizontal_margin"
        android:layout_marginEnd="@dimen/add_task_screen_horizontal_margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlTaskTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:textColor="@color/fieldTextColor"
            android:textColorHint="@color/fieldHintTextColor"
            app:boxStrokeColor="@color/field_stroke_color"
            app:expandedHintEnabled="false"
            app:hintTextColor="@color/fieldHintTextColor">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llTime"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/flTaskTime"
                android:layout_alignBottom="@+id/flTaskTime"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/field_stroke"
                android:paddingStart="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spTime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/fieldTextColor"
                    android:gravity="end"
                    android:padding="0dp"
                    android:spinnerMode="dropdown" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <FrameLayout
                android:id="@+id/flTaskTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/llTime">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tlTaskTime"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task_time"
                    android:textColor="@color/fieldTextColor"
                    android:textColorHint="@color/fieldHintTextColor"
                    app:boxStrokeColor="@color/field_stroke_color"
                    app:expandedHintEnabled="false"
                    app:hintTextColor="@color/fieldHintTextColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:inputType="none"
                        android:longClickable="false"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llTimeClick"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/shape_cancel_button"
                android:padding="@dimen/_5sdp"
                android:text="@string/task_cancel"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/shape_add_button"
                android:padding="@dimen/_5sdp"
                android:text="@string/task_add"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>